--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,12 +146,12 @@ input, select, textarea {
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
 		color: #585858;
-		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
+		border-bottom: dotted 1px rgba(88, 88, 88, 00087ff.5);
 	}
 
         a:hover {
             border-bottom-color: transparent;
-            color: #89ffd7 !important;
+            color: #0087ff !important;
         }
 
 	strong, b {
@@ -1840,8 +1840,8 @@ input, select, textarea {
 			}
 
             .icon.style2:hover {
-                color: #89ffd7;
-                border-color: #89ffd7;
+                color: #0087ff;
+                border-color: #0087ff;
             }
 
 			.icon.style2:active {
@@ -2154,8 +2154,8 @@ input, select, textarea {
         input[type="tel"]:focus,
         select:focus,
         textarea:focus {
-            border-bottom-color: #89ffd7;
-            box-shadow: inset 0 -1px 0 0 #89ffd7;
+            border-bottom-color: #0087ff;
+            box-shadow: inset 0 -1px 0 0 #0087ff;
         }
 
 	select {
@@ -2254,8 +2254,8 @@ input, select, textarea {
 
         input[type="checkbox"]:focus + label:before,
         input[type="radio"]:focus + label:before {
-            border-color: #89ffd7;
-            box-shadow: 0 0 0 1px #89ffd7;
+            border-color: #0087ff;
+            box-shadow: 0 0 0 1px #0087ff;
         }
 
 	input[type="checkbox"] + label:before {
@@ -2473,8 +2473,8 @@ input, select, textarea {
         input[type="button"]:hover,
         button:hover,
         .button:hover {
-            color: #89ffd7 !important;
-            box-shadow: inset 0 0 0 2px #89ffd7;
+            color: #0087ff !important;
+            box-shadow: inset 0 0 0 2px #0087ff;
         }
 
 		input[type="submit"]:active,
@@ -2516,7 +2516,7 @@ input, select, textarea {
             input[type="button"].primary:hover,
             button.primary:hover,
             .button.primary:hover {
-                background-color: #89ffd7;
+                background-color: #0087ff;
             }
 
 			input[type="submit"].primary:active,
@@ -2685,7 +2685,7 @@ input, select, textarea {
 					}
 
             .tiles article.style1 > .image:before {
-                background-color: #89ffd7;
+                background-color: #0087ff;
             }
 
 			.tiles article.style2 > .image:before {
