--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2685,7 +2685,7 @@ input, select, textarea {
 					}
 
             .tiles article.style1 > .image:before {
-                background-color: #0087ff;
+                background-color: #f2849e;
             }
 
 			.tiles article.style2 > .image:before {
