--- a/archive/assets/mainstyle.css
+++ b/archive/assets/mainstyle.css
@@ -193,19 +193,19 @@
 
   /* 슬라이드 배너 이미지 하드코딩 */
   .slide:nth-child(1) {
-      background-image: url('https://cdn-pro-web-250-115.cdn-nhncommerce.com/sunh019_godomall_com/data/skin/front/LUCKY_4/img/banner/slider_511517418/90411a6d565ce0379ab2f2018b080bdb_18495.jpg');
+      background-image: url('https://knmango.github.io/archive/assets/banner1.jpg');
       background-size: contain;
       background-position: center;
   }
 
   .slide:nth-child(2) {
-      background-image: url('https://cdn-pro-web-250-115.cdn-nhncommerce.com/sunh019_godomall_com/data/skin/front/LUCKY_4/img/banner/slider_511517418/b8fd8577f10233b172f104a8f2e06075_54291.jpg');
+      background-image: url('https://knmango.github.io/archive/assets/banner2.jpg');
       background-size: contain;
       background-position: center;
   }
 
   .slide:nth-child(3) {
-      background-image: url('https://cdn-pro-web-250-115.cdn-nhncommerce.com/sunh019_godomall_com/data/skin/front/LUCKY_4/img/banner/slider_511517418/6b0b2c0a002c2528c98d11e557756854_30535.jpg');
+      background-image: url('https://knmango.github.io/archive/assets/banner3.jpg');
       background-size: contain;
       background-position: center;
   }
